force-app/main/default/objects/Involved_Accounts__c/Involved_Accounts__c.object-meta.xml
<CustomObject>
    <description>1. Not Integration relevant
2. ZRD
3- SF-49</description>
    <label>Involvierter Account</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Involved Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involvierte Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>