force-app/main/default/objects/Involved_Accounts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Core_Legal_Status_ID__c</field>
            <operation>notEqual</operation>
            <value>ARGE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Involved_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>