force-app/main/default/objects/Involved_Accounts__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical_Management</fullName>
                <label>Technical Management</label>
            </value>
            <value>
                <fullName>Commercial_Management</fullName>
                <label>Commercial Management</label>
            </value>
            <value>
                <fullName>ARGE_Partner</fullName>
                <label>ARGE-Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>