force-app/main/default/objects/Involved_Accounts__c/fields/ARGE__c.field-meta.xml
<CustomField>
    <fullName>ARGE__c</fullName>
    <description>1. Not relevant for Integration
2. ZR
3.</description>
    <label>ARGE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Core_Legal_Status_ID__c</field>
            <operation>equals</operation>
            <value>ARGE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Involved Accounts (ARGE)</relationshipLabel>
    <relationshipName>ARGEN</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>