force-app/main/default/objects/Involved_Accounts__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>